--- a/Results.tex
+++ b/Results.tex
@@ -180,104 +180,81 @@ The fourth method evaluated in this work was the atmospheric correction approach
 % -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
 \subsubsection{$R_{rs}$ Comparison Results}
 
-\todo{Include new figures in the description} The four atmospheric correction methods (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM) described in Section~\ref{sec:atmcorr} \todo{Check section!} are compared in this section. These algorithm were applied to the 09-19-2013 Landsat 8 image. A mask was created to mask out all pixels but water pixels. This mask was created by thresholding the Landsat 8's SWIR 2 band. \autoref{fig:Rrs443}--\ref{fig:Rrs561} show the $R_{rs}$ for band 1--3 for these methods. When analyzed visually, the similarities among the methods are higher in band 3 than band 1. For band 1, SeaDAS-SWIR and SeaDAS-MUMM look similar in both the lake and ponds. Also, the SeaDAS-SWIR method exhibits some noise in band 1. This is caused due to the low SNR in SWIR bands used for the atmospheric correction. Note that there are some bottom effect in the lake's shoreline causing all methods to retrieve high $R_{rs}$ in those areas, which is not the case. This should be taken in account for future processing by masking the areas where the water is clear enough that the bottom can be seen.
+The four atmospheric correction methods (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM) described in the previous section are compared in this section. These algorithm were applied to the 09-19-2013 Landsat 8 image (\autoref{fig:0910913Sites})). A mask was created to mask out all pixels but water pixels. This mask was created by thresholding the Landsat 8's SWIR 2 band. \autoref{fig:Rrs443_482}--\ref{fig:Rrs561_655} show the $R_{rs}$ for band 1--4 for these methods. When analyzed visually, the similarities among the methods are higher in band 3 than band 1. For band 1, SeaDAS-SWIR and SeaDAS-MUMM look similar in both the lake and ponds. Also, the SeaDAS-SWIR method exhibits some noise in band 1. This is caused due to the low SNR in SWIR bands used for the atmospheric correction. Note that there are some bottom effect in the lake's shoreline causing all methods to retrieve high $R_{rs}$ in those areas, which is not the case. This should be taken in account for future processing by masking the areas where the water is clear enough that the bottom can be seen.
 
-Another comparison of $R_{rs}$ at $443nm$ and $561nm$ among all four atmospheric correction methods is shown in \autoref{fig:13262Rrs443}--\ref{fig:13262Rrs561} as scatter plots with a regression line in red solid lines. Again, all the methods show more similarities in band 3 than band 1, which is corroborated by the smaller offset values for band 3 than band 1, which translates to more closeness to the $1:1$ line. This indicates that there is a higher correlation for band 3 than band 1 for all methods. \autoref{tab:RrsCompMethod} shows the slope and offset for the regression lines and the goodness of fit $R^2$ values for the comparison among all methods and for all bands. The $R^2$ values show a good correlation for all cases in the range from $0.7090$ to $0.9302$ (underlined in \autoref{tab:RrsCompMethod}). \autoref{tab:RrsCompMethod} also shows the number of valid pixels retrieved $N$ (non negative) and the root mean squared error (RMSE) between the methods compared. 
-
-All methods produced negative $R_{r}$ values. These negative values indicates that the atmosphere contribution has been over estimated. These negative values are shown in \autoref{tab:RrsCompMethod} as percentage of the total of water pixels for each method compared. These negative values were not used in the comparison. Finally, \autoref{tab:RrsCompMethod} shows the percentage of total number of water pixels used in the comparison (labeled as Used $[\%]$). It can be seen that the Gordon and Wang's based methods generate more negative values compared with the MoB-ELM method overall. 
-
-\autoref{fig:13262RrsCompField} shows a comparison between $R_{rs}$ spectra measured in the field (blue dashed line) with retrieved $R_{rs}$ spectra from the four atmospheric correction methods for different sites within the study area. The spectra for each method tend to differ more from the field spectra in band 1 and 2 than in band 3 and 4, for all sites. We calculated the normalized root mean squared error (NRMSE) for $R_{rs}(\lambda)$ to evaluate the differences between field measurements and spectra retrieved from the atmospheric correction methods. The NRMSE is defined as
-
-\begin{equation}
-\label{eq:NRMSE}
-  NRMSE =\frac{\sqrt{\frac{1}{N}\sum_{n=1}^N{\left[R_{rs}(\lambda)_{ret}(n) - R_{rs}(\lambda)_{mea}(n)\right]^2}}}{max\{R_{rs}(\lambda)_{mea}(n)\} - min\{R_{rs}(\lambda)_{mea}(n)\}}\times100 ~[\%]
-\end{equation}
-
-\noindent where $R_{rs}(\lambda)_{ret}$ is the retrieved $R_{rs}(\lambda)$, $R_{rs}(\lambda)_{mea}$ is the measured $R_{rs}(\lambda)$, and $n=1\dots N$ is the number of measured concentrations. \autoref{fig:NRMSE130919_RRS} shows the NRMSE for all the atmospheric correction methods for all bands. It can be seen that the MoB-ELM perform the best for all bands, followed by SeaDAS-SWIR. 
-% The biggest errors are obtained when applying the Acolite-SWIR method, specially in band 1.
-
-
-
-% \begin{figure}[htb]
-%   \centering
-%   \includegraphics[height=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collated2013262_2_band_1_D.png}
-%   \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore).\label{fig:RrsROIs130919} } 
-% \end{figure}
-
-% \begin{overpic}[width=0.5\textwidth,grid,tics=10]{pictures/baum}
-%  \put (20,85) {\huge$\displaystyle\gamma$}
-% \end{overpic}
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htb]
+\begin{figure}[htb!]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 200 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/subset_0_of_Collocated13262_ACOSWIR_MOB_SEA_Rrs_443MOBdivpi}
-      \put (5,5) {MOB-ELM}
+      \put (1,5) {(a) $443nm$ MOB-ELM}
       \end{overpic}
     \end{minipage}
     \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 200 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/subset_0_of_Collocated13262_ACOSWIR_MOB_SEA_Rrs_443ACO}
-      \put (5,5) {Acolite-SWIR}
+      \put (1,5) {(b) $443nm$ Acolite-SWIR}
       \end{overpic}
     \end{minipage}
 
-    \vspace{0.7cm}
+    \vspace{0.8cm}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 200 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/subset_0_of_Collocated13262_ACOSWIR_MOB_SEA_Rrs_443SEA}
-      \put (5,5) {SeaDAS-SWIR}
+      \put (1,5) {(c) $443nm$ SeaDAS-SWIR}
       \end{overpic}
     \end{minipage}
     \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=30 170 40 150,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_443_MUMM45}
-      \put (5,5) {SeaDAS-MUMM}
+      \put (1,5) {(d) $443nm$ SeaDAS-MUMM}
       \end{overpic}
     \end{minipage}
 
-    \begin{minipage}[c]{1.0\linewidth}
-      \centering
-      \vspace{0.5cm}
-      \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar}
-      \put (28,16) {$R_{rs}(443nm) [1/sr]$}
-      \end{overpic}
-    \end{minipage}
+    \vspace{0.8cm}
 
-  \caption{Remote-sensing reflectance ($R_{rs}$) at $443nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs443} } 
-\end{figure}
+%     \begin{minipage}[c]{1.0\linewidth}
+%       \centering
+%       \vspace{0.5cm}
+%       \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar}
+%       \put (18,16)( {$R_{rs}(443nm) [1/sr]$}
+%       \end{overpic}
+%     \end{minipage}
+
+%   \caption{Remote-sensing reflectance ($R_{rs}$) at $443nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs443} } 
+% \end{figure}
 % %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htb]
+% \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 150 40 150,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_483_MOB}
-      \put (5,6) {MOB-ELM}
+      \put (1,6) {(e) $482nm$ MOB-ELM}
       \end{overpic}
     \end{minipage}
     \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 40 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_483_ACO_R_R}
-      \put (5,5) {Acolite-SWIR}
+      \put (1,5) {(f) $482nm$ Acolite-SWIR}
       \end{overpic}
     \end{minipage}
 
-    \vspace{0.7cm}
+    \vspace{0.8cm}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 40 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_482_SEA5x5_R}
-      \put (5,5) {SeaDAS-SWIR}
+      \put (1,5) {(g) $482nm$ SeaDAS-SWIR}
       \end{overpic}
     \end{minipage}
     \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 150 40 150,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_482_MUMM45}
-      \put (5,5) {SeaDAS-MUMM}
+      \put (1,5) {h) $482nm$ SeaDAS-MUMM}
       \end{overpic}
     \end{minipage}
     
@@ -286,98 +263,102 @@ All methods produced negative $R_{r}$ values. These negative values indicates th
       \centering
       \vspace{0.5cm}
       \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar}
-      \put (28,16) {$R_{rs}(482nm) [1/sr]$}
+      \put (40,16) {$R_{rs} [1/sr]$}
       \end{overpic}
     \end{minipage}
 
-  \caption{Remote-sensing reflectance ($R_{rs}$) at $482nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs482} } 
+  \caption{Remote-sensing reflectance ($R_{rs}$) at $443nm$ and $482nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs443_482} } 
 \end{figure}
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htb]
+\begin{figure}[htb!]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 155 40 150,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_561_MOB}
-      \put (5,5) {MOB-ELM}
+      \put (1,5) {(a) $561nm$ MOB-ELM}
       \end{overpic}
     \end{minipage}
     \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 150 40 150,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_561_ACO_R_R}
-      \put (5,5) {Acolite-SWIR}
+      \put (1,5) {(b) $561nm$ Acolite-SWIR}
       \end{overpic}
     \end{minipage}
 
-    \vspace{0.7cm}
+    \vspace{1.0cm}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 150 40 150,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_561_SEA5x5_R}
-      \put (5,5) {SeaDAS-SWIR}
+      \put (1,5) {(c) $561nm$ SeaDAS-SWIR}
       \end{overpic}
     \end{minipage}
     \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 150 40 150,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_561_MUMM45}
-      \put (5,5) {SeaDAS-MUMM}
+      \put (1,5) {(d) $561nm$ SeaDAS-MUMM}
       \end{overpic}
     \end{minipage}
     
+    \vspace{1.0cm}
 
-    \begin{minipage}[c]{1.0\linewidth}
-      \centering
-      \vspace{0.5cm}
-      \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar}
-      \put (28,16) {$R_{rs}(561nm) [1/sr]$}
-      \end{overpic}
-    \end{minipage}
+%     \begin{minipage}[c]{1.0\linewidth}
+%       \centering
+%       \vspace{0.5cm}
+%       \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar}
+%       \put (18,16)(a) $561nm$  {$R_{rs}(561nm) [1/sr]$}
+%       \end{overpic}
+%     \end{minipage}
 
-  \caption{Remote-sensing reflectance ($R_{rs}$) at $561nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM..\label{fig:Rrs561} } 
-\end{figure}
-%^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htb]
+%   \caption{Remote-sensing reflectance ($R_{rs}$) at $561nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM..\label{fig:Rrs561} } 
+% \end{figure}
+% %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+% \begin{figure}[htb]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 40 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_655_MOB}
-      \put (5,5) {MOB-ELM}
+      \put (1,5) {(e) $655nm$ MOB-ELM}
       \end{overpic}
     \end{minipage}
     \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 40 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_655_ACO_R_R}
-      \put (5,5) {Acolite-SWIR}
+      \put (1,5) {(f) $655nm$ Acolite-SWIR}
       \end{overpic}
     \end{minipage}
 
-    \vspace{0.7cm}
+    \vspace{1.0cm}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 40 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_655_SEA5x5_R}
-      \put (5,5) {SEADAS-SWIR}
+      \put (1,5) {(g) $655nm$ SEADAS-SWIR}
       \end{overpic}
     \end{minipage}
     \hfill
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 40 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_Rrs_655_MUMM45}
-      \put (5,5) {SeaDAS-MUMM}
+      \put (1,5) {(h) $655nm$ SeaDAS-MUMM}
       \end{overpic}
     \end{minipage}
     
-
     \begin{minipage}[c]{1.0\linewidth}
       \centering
       \vspace{0.5cm}
       \begin{overpic}[trim=0 0 0 0,clip,height=1.2cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collocated13262_ACOSWIR_MOB_SEA5x5_MUMM45_colorbar}
-      \put (28,16) {$R_{rs}(655nm) [1/sr]$}
+      \put (40,16) {$R_{rs}[1/sr]$}
       \end{overpic}
     \end{minipage}
 
-  \caption{Remote-sensing reflectance ($R_{rs}$) at $655nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs655} } 
+  \caption{Remote-sensing reflectance ($R_{rs}$) at $561nm$ and $655nm$ from the 09-19-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) processed using the MoB-ELM, SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM.\label{fig:Rrs561_655} } 
 \end{figure}
+
+Another comparison of $R_{rs}$ at $443nm$, $483$, $561nm$ and $655nm$ among all four atmospheric correction methods is shown in \autoref{fig:13262Rrs443}--\ref{fig:13262Rrs655} as scatter plots with a regression line in red solid lines. Again, all the methods show more similarities in band 3 than band 1, which is corroborated by the smaller offset values for band 3 than band 1, which translates to more closeness to the $1:1$ line. This indicates that there is a higher correlation for band 3 than band 1 for all methods. \autoref{tab:RrsCompMethod} shows the slope and offset for the regression lines and the goodness of fit $R^2$ values for the comparison among all methods and for all bands. The $R^2$ values show a good correlation for all cases in the range from $0.7090$ to $0.9302$ (underlined in \autoref{tab:RrsCompMethod}). \autoref{tab:RrsCompMethod} also shows the number of valid pixels retrieved $N$ (non negative) and the root mean squared error (RMSE) between the methods compared. 
+
+
 
 % Method 1    Method 2    wl    NegTool1  NegTool2    usable  rsq_SS      rsq_corr    slope   offset      R^2         N           RMSE
 % Acolite     MoB-ELM     443   0.53      0.09        97      .0.8791     0.8828      0.9444  -0.0047     0.8791      144047     0.0054
@@ -405,7 +386,7 @@ All methods produced negative $R_{r}$ values. These negative values indicates th
 % SeaDAS      MUMM        655   43.68     42.49       56      .0.7964     0.8067      1.0063  +0.0004     0.7964      146144     0.0007
 % MUMM        MoB-ELM     655   42.49     0.00        56      .0.6841     0.7091      1.2403  -0.0008     0.6841      145340     0.0009   
  
-\begin{table}[!ht]
+\begin{table}[htb!]
 \vspace{.3cm}
 \caption{ Comparison of the different atmospheric correction methods for retrieving $R_{rs}$ with the slope and offset for the regression lines and their respective goodness of fit values. \label{tab:RrsCompMethod} } 
 \centering
@@ -441,47 +422,62 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
       &   SeaDAS-SWIR   &  SeaDAS-MUMM  & 1.0063  & ~0.0004 & 0.7964  & 146144  & 0.0007  &  43.68      & 42.49            &   56      \\
  \end{tabular}
 \end{table}
+
+All methods produced negative $R_{rs}$ values. These negative values indicates that the atmosphere contribution has been over estimated. These negative values are shown in \autoref{tab:RrsCompMethod} as percentage of the total of water pixels for each method compared. These negative values were not used in the comparison. Finally, \autoref{tab:RrsCompMethod} shows the percentage of total number of water pixels used in the comparison (labeled as Used $[\%]$). It can be seen that the Gordon and Wang's based methods generate more negative values compared with the MoB-ELM method overall. 
+
+\autoref{fig:13262RrsCompField} shows a comparison between $R_{rs}$ spectra measured in the field (blue dashed line) with retrieved $R_{rs}$ spectra from the four atmospheric correction methods for different sites within the study area. The spectra for each method tend to differ more from the field spectra in band 1 and 2 than in band 3 and 4, for all sites. We calculated the normalized root mean squared error (NRMSE) for $R_{rs}(\lambda)$ to evaluate the differences between field measurements and spectra retrieved from the atmospheric correction methods. The NRMSE is defined as
+
+\begin{equation}
+\label{eq:NRMSE}
+  NRMSE =\frac{\sqrt{\frac{1}{N}\sum_{n=1}^N{\left[R_{rs}(\lambda)_{ret}(n) - R_{rs}(\lambda)_{mea}(n)\right]^2}}}{max\{R_{rs}(\lambda)_{mea}(n)\} - min\{R_{rs}(\lambda)_{mea}(n)\}}\times100 ~[\%]
+\end{equation}
+
+\noindent where $R_{rs}(\lambda)_{ret}$ is the retrieved $R_{rs}(\lambda)$, $R_{rs}(\lambda)_{mea}$ is the measured $R_{rs}(\lambda)$, and $n=1\dots N$ is the number of measured concentrations. \autoref{fig:NRMSE130919_RRS} shows the NRMSE for all the atmospheric correction methods for all bands. It can be seen that the MoB-ELM perform the best for all bands, followed by SeaDAS-SWIR. 
+% The biggest errors are obtained when applying the Acolite-SWIR method, specially in band 1.
+
+
+
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htb]
+\begin{figure}[H]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-MUMM.png}
-      % \put (65,17) {\large A) $443nm$}
+      \put (80,20) {(a)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_MoB-ELM.png}
-      % \put (65,17) {\large B) $483nm$}
+      \put (80,20) {(b)}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_Acolite-SWIR_SeaDAS-SWIR.png}
-      % \put (65,17) {\large C) $561nm$}
+      \put (80,20) {(c)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-MUMM_MoB-ELM.png}
-      % \put (65,17) {\large D) $655nm$}
+      \put (80,20) {(d)}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-SWIR_SeaDAS-MUMM.png}
-      % \put (65,17) {\large C) $561nm$}
+      \put (80,20) {(e)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_443_SeaDAS-SWIR_MoB-ELM.png}
-      % \put (65,17) {\large D) $655nm$}
+      \put (80,20) {(f)}
       \end{overpic}
   \end{minipage}
 
@@ -496,46 +492,46 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htb]
+\begin{figure}[H]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite-SWIR_SeaDAS-MUMM.png}
-      % \put (65,17) {\large A) $443nm$}
+      \put (80,20) {(a)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite-SWIR_MoB-ELM.png}
-      % \put (65,17) {\large B) $483nm$}
+      \put (80,20) {(b)}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_Acolite-SWIR_SeaDAS-SWIR.png}
-      % \put (65,17) {\large C) $483nm$}
+      \put (80,20) {(c)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS-MUMM_MoB-ELM.png}
-      % \put (65,17) {\large D) $655nm$}
+      \put (80,20) {(d)}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS-SWIR_SeaDAS-MUMM.png}
-      % \put (65,17) {\large C) $483nm$}
+      \put (80,20) {(e)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_483_SeaDAS-SWIR_MoB-ELM.png}
-      % \put (65,17) {\large D) $655nm$}
+      \put (80,20) {(f)}
       \end{overpic}
   \end{minipage}
 
@@ -550,46 +546,46 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htb]
+\begin{figure}[H]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-MUMM.png}
-      % \put (65,17) {\large A) $443nm$}
+      \put (80,20) {(a)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_MoB-ELM.png}
-      % \put (65,17) {\large B) $483nm$}
+      \put (80,20) {(b)}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_Acolite-SWIR_SeaDAS-SWIR.png}
-      % \put (65,17) {\large C) $561nm$}
+      \put (80,20) {(c)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-MUMM_MoB-ELM.png}
-      % \put (65,17) {\large D) $655nm$}
+      \put (80,20) {(d)}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-SWIR_SeaDAS-MUMM.png}
-      % \put (65,17) {\large C) $561nm$}
+      \put (80,20) {(e)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_561_SeaDAS-SWIR_MoB-ELM.png}
-      % \put (65,17) {\large D) $655nm$}
+      \put (80,20) {(f)}
       \end{overpic}
   \end{minipage}
 
@@ -604,46 +600,46 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htb]
+\begin{figure}[H]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-MUMM.png}
-      % \put (65,17) {\large A) $443nm$}
+      \put (80,20) {(a)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_MoB-ELM.png}
-      % \put (65,17) {\large B) $483nm$}
+      \put (80,20) {(b)}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_Acolite-SWIR_SeaDAS-SWIR.png}
-      % \put (65,17) {\large C) $655nm$}
+      \put (80,20) {(c)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS-MUMM_MoB-ELM.png}
-      % \put (65,17) {\large D) $655nm$}
+      \put (80,20) {(d)}
       \end{overpic}
   \end{minipage}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS-SWIR_SeaDAS-MUMM.png}
-      % \put (65,17) {\large C) $655nm$}
+      \put (80,20) {(e)}
       \end{overpic}  
   \end{minipage}
   \hfill
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 65 0 0,clip,width=6.5cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/2013262_ACOMOBSEAMUM_655_SeaDAS-SWIR_MoB-ELM.png}
-      % \put (65,17) {\large D) $655nm$}
+      \put (80,20) {(f)}
       \end{overpic}
   \end{minipage}
 
@@ -657,8 +653,16 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
   \caption{Scatter plots showing the comparison of remote-sensing reflectance ($R_{rs}$) at 655 nm, derived from the 09-29-2013 image over the Rochester Embayment (scene LC80160302013262LGN00) using the the different methods. Colors denote pixel densities, the dashed black line is the 1:1 line, and the Reduced Major Axis (RMA) regression line is drawn in red. \label{fig:13262Rrs655} } 
 \end{figure}
 
+%^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+% \begin{figure}[htb]
+%   \centering
+%   \includegraphics[height=8.0cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/Collated2013262_2_band_1_D.png}
+%   \caption{$R_{rs}$ for the sites for the 09-19-2013 collection after applying the MoB-ELM atmospheric correction (Labels: LONGS: Long Pond south, CRANB: Cranberry Pond, ONTOS: Lake Ontario off-shore, and ONTNS: Lake Ontario near-shore).\label{fig:RrsROIs130919} } 
+% \end{figure}
+
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htb]
+\begin{figure}[H]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompONTNS.png}
@@ -697,7 +701,7 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 \end{figure}
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
-\begin{figure}[htb]
+\begin{figure}[H]
   \begin{minipage}[d]{0.48\linewidth}
     \centering
       \begin{overpic}[trim=0 0 0 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/RrsCompLONGN.png}
@@ -740,7 +744,7 @@ $[nm]$    &             &         &       &     &       &       &$[mg/m^3]$ & Me
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
-\begin{figure}[htb]
+\begin{figure}[H]
   \begin{minipage}[c]{0.48\linewidth}
       \centering
       \begin{overpic}[trim=30 0 50 0,clip,width=7cm]{/Users/javier/Desktop/Javier/PHD_RIT/ConferencesAndApplications/2015_SPIE_SanDiego/Images/NRMSE_RRS_B1.png}
@@ -1014,7 +1018,7 @@ The next step was to apply the algorithms described in Section~\ref{sec:retrieva
       \end{overpic}
     \end{minipage}
 
-    \vspace{0.7cm}
+    \vspace{0.8cm}
 
   \begin{minipage}[c]{0.48\linewidth}
       \centering
